# gl_rl_model

./: .gitignore  CLAUDE.md  CODEBASE_STRUCTURE.md  README.md  SAGEMAKER_README.md  SageMaker_Complete_Setup.ipynb  SageMaker_Setup.ipynb  TRAINING_GUIDE.md  api_server.py  append_more_training_data.py  compare_checkpoints.py  download_model.py  evaluate_model.py  example_usage.py  generate_training_data.py  pyproject.toml  pytest.ini  run_training.py  sagemaker_setup.sh  sagemaker_setup_conda.sh  sagemaker_setup_final.sh  sagemaker_setup_proper.sh  sagemaker_setup_simple.sh  test_complex_unseen.py  test_domain_checkpoint.py  test_generation.py  test_implementation.py  test_integration.py  test_model.py  test_model_cpu.py  test_model_load.py  test_schema_integration.py  test_sql_extraction.py  test_trained_model.py  train_grpo.py  train_grpo_mps.py  train_improved.py  train_minimal.py  train_sft.py  train_sft_mps.py
colab/: gl_rl_model_colab_training.ipynb
docs/: API_DOCUMENTATION.md  IMPLEMENTATION_STATUS.md  PHASE2_PROGRESS.md
docs/architecture/: system_overview.md
docs/deployment/: DEPLOYMENT_GUIDE.md
gl_rl_model/agents/: orchestrator.py  query_generator.py  reward_evaluator.py  schema_analyzer.py  validator.py
gl_rl_model/core/: base_agent.py  config.py
gl_rl_model/models/: qwen_wrapper.py
gl_rl_model/training/: __init__.py  dataset_loader.py  grpo_trainer.py  grpo_trainer_mps.py  schema_loader.py  sft_trainer.py
gl_rl_model/utils/: prompt_templates.py  reward_functions.py  sql_postprocessor.py  sql_validator.py
sagemaker/: README.md
scripts/: fetch_cloudwatch_logs.py  launch_training.py  monitor_training.py
terraform/: variables.tf
(+28 files in other folders)
