[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl_rl_model"

version = "0.1.4"
description = "Reasoning Models From Scratch For General Ledger"
readme = "README.md"

authors = [
  { name = "Srini Maddineni" }
]

license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "jupyterlab>=4.0",
    "torch==2.7.1",
    "tokenizers>=0.21.2",
    "nbformat>=5.10.4",
    "sympy>=1.14.0",  # For verifier in ch03
    "transformers>=4.35.0",  # For Qwen model
    "trl>=0.7.0",  # For GRPO implementation
    "peft>=0.6.0",  # For LoRA fine-tuning
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",  # For 8-bit quantization
    "sqlparse>=0.4.4",  # For SQL parsing
    "fastapi>=0.104.0",  # For API server
    "uvicorn>=0.24.0",  # For API server
    "pandas>=2.0.0",  # For data processing
    "numpy>=1.24.0",  # For numerical operations
    "scikit-learn>=1.3.0"  # For evaluation metrics
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.4.4",
    "pytest-ruff>=0.5",
    "transformers==4.53.0",
    "twine>=6.1.0",
    "build>=1.2.2.post1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gl_rl_model"]